<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".page.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@drawable/bg_head"
        android:gravity="center_vertical"
        android:paddingStart="50dp"
        android:paddingLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:textColor="@color/yellow"
            android:textSize="@dimen/mr_screen" />

        <com.zzrh.lottery.ui.FocusButton
            android:id="@+id/btn_back"
            android:layout_width="114dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/selector_bg_main_btn"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeBtn" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/head"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="110dp"
        android:orientation="vertical">


        <RelativeLayout

            android:id="@+id/rl_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_tel_title"
                android:layout_width="216dp"
                android:layout_height="52dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_text_violet"
                android:gravity="center"
                android:text="@string/oldPassword"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_toEndOf="@id/tv_tel_title"
                android:layout_toRightOf="@id/tv_tel_title"
                android:background="@color/gray_a"
                android:hint="@string/oldPasswordHint"
                android:paddingStart="42dp"
                android:paddingLeft="42dp"
                android:textColor="@color/white_a"
                android:textColorHint="@color/white_a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_password_title"
                android:layout_width="216dp"
                android:layout_height="52dp"
                android:layout_below="@id/tv_tel_title"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_text_violet"
                android:gravity="center"
                android:text="@string/newPassword"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_alignTop="@id/tv_password_title"
                android:layout_toEndOf="@id/tv_tel_title"
                android:layout_toRightOf="@id/tv_tel_title"
                android:background="@color/gray_a"
                android:hint="@string/newPasswordHint"
                android:paddingStart="42dp"
                android:paddingLeft="42dp"
                android:textColor="@color/white_a"
                android:textColorHint="@color/white_a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_password_q_title"
                android:layout_width="216dp"
                android:layout_height="52dp"
                android:layout_below="@id/tv_password_title"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_text_violet"
                android:gravity="center"
                android:text="确认密码"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_password_q"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_alignTop="@id/tv_password_q_title"
                android:layout_toEndOf="@id/tv_tel_title"
                android:layout_toRightOf="@id/tv_tel_title"
                android:background="@color/gray_a"
                android:hint="@string/newPasswordQHint"
                android:paddingStart="42dp"
                android:paddingLeft="42dp"
                android:textColor="@color/white_a"
                android:textColorHint="@color/white_a"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/rl_input"
            android:layout_weight="1">

            <com.zzrh.lottery.ui.FocusButton
                android:id="@+id/btn_submit"
                android:layout_width="268dp"
                android:layout_height="62dp"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:background="@drawable/selector_bg_main_btn"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>